cahnged script to Styletag

--- a/views/index.html
+++ b/views/index.html
@@ -190,10 +190,10 @@ Here’s your chance to do that in just one easy click!</p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript">
-    var _taq = {"id":"bf180591-b49b-41f5-a56a-ef4445bcbaec","events":[],"identify":[],"property":[], "handlers":[]};
+    var _taq = {"id":"107a3b41-1aa3-45c6-a324-f0399a2aa2af","events":[],"identify":[],"property":[], "handlers":[]};
     (function() {
         var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.id = "__ta";
-        ta.src = '//cdn-jp.gsecondscreen.com/static/ta.min.js';
+        ta.src = '//cdn-jp.gsecondscreen.com/static/tac.min.js';
         var fs = document.getElementsByTagName('script')[0]; fs.parentNode.insertBefore(ta, fs);
     })();
 </script>
