--- a/views/category.html
+++ b/views/category.html
@@ -50,7 +50,7 @@
     <div class="topnav">
         <a href="/" style="margin-left: 50px;">Home</a>
         <a class="active" href="/category">Categories</a>
-        <a href="#contact">Contact</a>
+        <a href="/seniority">Seniority</a>
         <a href="#about">About</a>
       </div>      
       <div style="padding-left:16px">
