--- a/views/home_page.html
+++ b/views/home_page.html
@@ -50,7 +50,7 @@
     <div class="topnav">
         <a class="active" href="/" style="margin-left: 50px !important;">Home</a>
         <a href="/category">Categories</a>
-        <a href="#contact">Contact</a>
+        <a href="/seniority">Seniority</a>
         <a href="#about">About</a>
       </div>      
       <div style="padding-left:16px">
