--- a/views/home_page.html
+++ b/views/home_page.html
@@ -43,16 +43,35 @@
         color: white;
     }
     </style>
+    <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-5XB4NHH');</script>
+    <!-- End Google Tag Manager -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--<script>
+			$(function(){
+				$("#header").load("./views/header.html"); 
+				//$("#footer").load("footer.html"); 
+			});
+		</script>-->
 </head>
 <body>
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XB4NHH"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 <div class="bg">
-    <div class="topnav">
-        <a class="active" href="/" style="margin-left: 50px !important;">Home</a>
-        <a href="/category">Categories</a>
-        <a href="/seniority">Seniority</a>
-        <a href="#about">About</a>
-      </div>      
+        <div id="header">
+                <div class="topnav">
+                        <a class="active" href="/" style="margin-left: 50px !important;">Home</a>
+                        <a href="/category">Categories</a>
+                        <a href="/seniority">Seniority</a>
+                        <a href="#about">About</a>
+                      </div>  
+        </div>    
       <div style="padding-left:16px">
         <h2>Top Navigation Example</h2>
         <p>Some content..</p>
