--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="./public/images/key-to-success.png">
-
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5XB4NHH');</script>
+	<!-- End Google Tag Manager -->
 	<style type="text/css">
 	@font-face {
     font-family: 'DINRoundOT';
@@ -108,12 +114,29 @@ input[type=submit]:hover {
 }
 
 	</style>
-
+	<!--<script>
+			$(function(){
+				$("#header").load("./views/header.html"); 
+				//$("#footer").load("footer.html"); 
+			});
+		</script>-->
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XB4NHH"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 <div class="container-fluid">
-<div class="row">
+		<div id="header">
+			<div class="topnav">
+                <a class="active" href="/" style="margin-left: 50px !important;">Home</a>
+                <a href="/category">Categories</a>
+                <a href="/seniority">Seniority</a>
+                <a href="#about">About</a>
+			  </div>  
+			</div>
+	<div class="row">
 	<div class="col-md-12 nopadding">
 	<img src="./public/images/Christmas-01.jpg" class="img-responsive">
 	</div>
