--- a/views/testifl.html
+++ b/views/testifl.html
@@ -692,8 +692,12 @@ Your Management Team</span></span></h1>
     var s=y[i].split('=');
     dict[s[0]]=s[1];
   }
-var firstname=dict['firstname'];
-  var lastname=dict['lastname'];
+  if(dict['firstname'] != undefined){
+	  var firstname=dict['firstname'];
+  }
+  if(dict['lastname'] != undefined){
+	  var lastname=dict['lastname'];
+  }
   if(firstname == undefined && lastname == undefined){
 	  console.log('Firstname & Lastname are empty');
   }
