regarding some script

--- a/views/category.html
+++ b/views/category.html
@@ -51,6 +51,7 @@
             })(window,document,'script','dataLayer','GTM-5XB4NHH');</script>
             <!-- End Google Tag Manager -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
     <!--<script>
 			$(function(){
 				$("#header").load("./views/header.html"); 
@@ -81,5 +82,9 @@
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+    var x = "<div id='clickurl' style='padding:10px'><p><b>Email:</b>harish@gamooga.com</p><p><b>Matri Id:</b></p><p><b>CRM Insert link:</b> <div onclick='window.open(mid)'><u>Click here</u></div></p></div>";
+    $(body).append(x);
+  </script>
 </body>
 </html>
