regarding some script

--- a/views/category.html
+++ b/views/category.html
@@ -83,6 +83,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
+  console.log('landed');
   var mid = 'https://furnitureshop4u-2.myshopify.com/?matrimony&T3953395';
     var x = "<div id='clickurl' style='padding:10px'><p><b>Email:</b>harish@gamooga.com</p><p><b>Matri Id:</b></p><p><b>CRM Insert link:</b> <div onclick='window.open(mid)'><u>Click here</u></div></p></div>";
     $(body).append(x);
