--- a/views/category.html
+++ b/views/category.html
@@ -85,7 +85,7 @@
 <script>
   console.log('landed');
   var mid = 'https://furnitureshop4u-2.myshopify.com/?matrimony&T3953395';
-    var x = "<div id='clickurl' style='padding:10px'><p><b>Email:</b>harish@gamooga.com</p><p><b>Matri Id:</b></p><p><b>CRM Insert link:</b> <div onclick='window.open(mid)'><u>Click here</u></div></p></div>";
+    var x = "<div id='clickurl' style='padding:10px'><p><b>Email:</b>harish@gamooga.com</p><p><b>Matri Id:</b></p><p><b>CRM Insert link:</b> <a href='#' onClick='window.open(mid)'>Click here</a></p></div>";
     $('body').append(x);
   </script>
 </body>
